<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:orientation="vertical"
              android:background="@color/colorPrimary"
              app:layout_behavior="@string/appbar_scrolling_view_behavior"
             tools:context="ansteph.com.lotto.view.registration.RegistrationFragment">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="75dp"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="wrong cell number/password"
        android:visibility="gone"
        android:textSize="12sp"
        android:layout_marginRight="40dp"
        android:textColor="@color/alert"
        android:id="@+id/txtAlertMsg"
        android:layout_gravity="left|bottom" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_firstname"
        android:layout_width="match_parent"
        android:textColorHint="@color/colorAccent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:inputType="textPersonName"
            android:hint="@string/hint_firstname"

            />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_surname"
        android:layout_width="match_parent"
        android:textColorHint="@color/colorAccent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:inputType="textPersonName"
            android:hint="@string/hint_surname"

            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_cellphone"
        android:layout_width="match_parent"
        android:textColorHint="@color/colorAccent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_cellphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:inputType="phone"
            android:hint="@string/hint_mobile"

            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_ID"
        android:layout_width="match_parent"
        android:textColorHint="@color/colorAccent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:inputType="numberSigned"
            android:hint="@string/hint_ID"

            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="match_parent"
        android:textColorHint="@color/colorAccent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email"

            />
    </android.support.design.widget.TextInputLayout>


    <Button android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_register"

            style="@style/buttonstyle"
            android:background="@color/colorAccent"
            android:layout_marginTop="40dp"
            android:textColor="@color/white"/>


</LinearLayout>
